# Qubo_Analysis

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
1_Code/1y6r_Qubo/: QUBO_1y6R_Pyomo_SCIP.ipynb  Qubo_1y6r_Pyomo-CPLIX.ipynb
1_Code/Hercules/: Qubo_1y6r_matrix.ipynb  Qubo_Matrix_1.ipynb
1_Code/Hercules/Data/: QUBO_1y6r_matrix.txt  QUBO_Matrix_1.txt  matrix_1.txt
1_Code/Pyomo/: QUBO_Matrix_1.ipynb
1_Code/Pyomo/Data/: matrix_2.txt
1_Code/Pyomo/Result/: matrix_1.txt  matrix_2.txt
1_Code/QDock/QDock/FeatureAtomMatching/: famreceptor.py  qdock.py
1_Code/QDock/QDock/GridPointMatching/: gpmgrid.py  gpmligand.py  gpmreceptor.py  qdock.py
1_Code/Qubolite/: Qubolite .ipynb
1_Code/Qubolite/Data/: matrix_2.txt
1_Code/Qubolite/qubolite_result/: matrix_1_results.txt  matrix_2_results.txt
3_Environment_setup_Details/: Environment Setup Pyomo and Qubolite.txt  Hercules_env_setup-docker.txt  QDock_Env.txt
qubo_analysis/: __init__.py  cli.py
