[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qubo-molecular-docking"
version = "0.1.0"
description = "QUBO formulation and benchmarking for quantum molecular docking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "pyomo>=6.9",
    "qubolite>=0.7,<0.8",   # 0.8+ has a C extension that fails on Windows MSVC
    "notebook>=7.0",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qubo_docking*"]

[project.scripts]
qubo-setup-kernel = "qubo_docking.cli:setup_kernel"