[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qubo_analysis"
dynamic = ["version"]
description = "QUBO formulation and benchmarking for quantum molecular docking"
readme = "README.md"
authors = [
    {name = "Allaudin Ansari", email = "allu456654ansari@gmail.com"},
]
requires-python = ">=3.9, <3.11"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Quantum Computing",
]

dependencies = [
    "pyscipopt>=4.4.0",
    "docplex>=2.25",
    "cplex>=22.1.0.0",
    "numpy>=1.26,<2.0",
    "pyomo>=6.9",
    "qubolite>=0.7,<0.8",   # 0.8+ has a C extension that fails on Windows MSVC
    "notebook>=7.0",
    "pyqubo==1.5.0",
    "prody>=2.4.0",
    "scipy>=1.10",
    "dwave-neal",
    "dimod",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "python-igraph",
    "portion"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
]


[project.urls]
#Homepage = "https://github.com/yourusername/qdock"
Repository = "https://github.com/allu0786ansari/Qubo_Analysis.git"
#"Bug Tracker" = "https://github.com/yourusername/qdock/issues"
#"Article" = "https://doi.org/10.1021/acs.jctc.3c00943"

[tool.hatch.version]
path = "qubo_analysis/__init__.py"

[tool.hatch.build.targets.wheel]